--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,9 @@
 services:
   - type: web
     name: mastery-backend-go
-    env: go
-    buildCommand: "go build -o app ."
-    startCommand: "./app"
+    env: docker
     plan: free
     autoDeploy: true
     envVars:
       - key: YT_COOKIES
-        sync: false # supaya bisa diisi manual di dashboard Render
+        sync: false # isi manual di dashboard Render
