--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: mastery-backend-go
-    env: docker
+    runtime: docker
     plan: free
     autoDeploy: true
     envVars:
